new files added

--- a/css/colors/index.html
+++ b/css/colors/index.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colors</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <meta name="description" content="Una pagina web para practicar">
+    <title>Mi Página Web</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <div id="myDiv">
-      <h1>Titulo y abajo texto</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ratione
-        vitae assumenda tempora veritatis, atque incidunt laborum consequuntur
-        quam distinctio harum. Neque nisi, corporis sunt perferendis nam iure,
-        at tempore laudantium maxime suscipit nesciunt eos, architecto quos quod
-        ut odio voluptatem saepe pariatur eum officiis doloribus quam! Porro,
-        dolorum ad.
-      </p>
-      <a
-        href="https://imagecolorpicker.com/color-code/e8eff3"
-        target="_blank"
-        rel="noreferrer"
-        >Colors</a
-      >
-    </div>
+    <header>
+      <h1>Mi Página Web</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Acerca de Nosotros</h2>
+        <p>Bienvenido a nuestra página web. Somos una empresa dedicada a...</p>
+      </section>
+      <section>
+        <h2>Nuestros Servicios</h2>
+        <ul>
+          <li>Servicio 1</li>
+          <li>Servicio 2</li>
+          <li>Servicio 3</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Contacto</h2>
+        <p>
+          Puedes ponerte en contacto con nosotros en la siguiente dirección:
+        </p>
+        <address>
+          Correo electrónico:
+          <a href="mailto:info@miempresa.com">info@miempresa.com</a><br />
+          Teléfono: <a href="tel:+123456789">123-456-789</a>
+        </address>
+      </section>
+
+      <section>
+        <h2>Mas informacion</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+          odio aperiam eligendi, est fuga obcaecati expedita modi totam quas quo
+          non? Repellat quae deleniti deserunt unde quos sunt molestiae
+          cupiditate suscipit enim in, nihil reprehenderit facere consequuntur
+          beatae nostrum minus dignissimos autem magni quidem ut! Distinctio
+          nisi sequi modi earum ipsum ex quo itaque quos. Delectus dolorum quis
+          rem illum quia ducimus eos itaque. Rem vel excepturi nulla, quis
+          blanditiis accusamus distinctio officiis cum harum debitis dolor
+          perferendis. Quas distinctio excepturi molestiae numquam esse eveniet
+          voluptatum, consectetur voluptatibus voluptate deserunt? Quod, labore
+          repellendus! Nihil corrupti, ea pariatur harum ab asperiores.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 Mi Página Web</p>
+    </footer>
   </body>
 </html>
