alls files formatted

--- a/css/box-model/index.html
+++ b/css/box-model/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Box model</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-  <h1>Los margenes se solapan el margen es el espacio minimo que un elemento tiene respecto al que tiene a su lado</h1>
-  <p class="margin-10">Este p tiene un margen de 10px</p>
-  <p class="margin-20">Este p tiene un margen de 20px</p>
-  <p class="margin-30">Este p tiene un margen de 30px</p>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Box model</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <h1>
+      Los margenes se solapan el margen es el espacio minimo que un elemento
+      tiene respecto al que tiene a su lado
+    </h1>
+    <p class="margin-10">Este p tiene un margen de 10px</p>
+    <p class="margin-20">Este p tiene un margen de 20px</p>
+    <p class="margin-30">Este p tiene un margen de 30px</p>
 
-  <h1>Border box y Content box</h1>
-  <div id="contentBox">
-    box-sizing: content-box;
-  </div>
-  <div id="borderBox">
-    box-sizing: border-box;
-  </div>
-
-  
-</body>
+    <h1>Border box y Content box</h1>
+    <div id="contentBox">box-sizing: content-box;</div>
+    <div id="borderBox">box-sizing: border-box;</div>
+  </body>
 </html>
