--- a/css/lists_2/index.html
+++ b/css/lists_2/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lists 2</title>
-  <link rel="stylesheet" href="./styles_1.css">
-  <link rel="stylesheet" href="./styles_2.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lists 2</title>
+    <link rel="stylesheet" href="./styles_1.css" />
+    <link rel="stylesheet" href="./styles_2.css" />
+  </head>
+  <body>
+    <!-- Barra vertical -->
+    <ul class="no-style vertical">
+      <li>
+        <a href="inicio.html">Inicio</a>
+      </li>
+      <li>
+        <a href="producto.html">Productos</a>
+      </li>
+      <li>
+        <a href="servicio.html">Servicios</a>
+      </li>
+      <li>
+        <a href="contacto.html">Contacto</a>
+      </li>
+    </ul>
 
-  <!-- Barra vertical -->
-  <ul class="no-style vertical">
-    <li>
-      <a href="inicio.html">Inicio</a>
-    </li>
-    <li>
-      <a href="producto.html">Productos</a>
-    </li>
-    <li>
-      <a href="servicio.html">Servicios</a>
-    </li>
-    <li>
-      <a href="contacto.html">Contacto</a>
-    </li>
-  </ul>
-
-  <!-- Barra horizontal -->
-  <ul class="no-style horizontal">
-    <li>
-      <a href="inicio.html">Inicio</a>
-    </li>
-    <li>
-      <a href="producto.html">Productos</a>
-    </li>
-    <li>
-      <a href="servicio.html">Servicios</a>
-    </li>
-    <li>
-      <a href="contacto.html">Contacto</a>
-    </li>
-  </ul>
-
-  
-</body>
+    <!-- Barra horizontal -->
+    <ul class="no-style horizontal">
+      <li>
+        <a href="inicio.html">Inicio</a>
+      </li>
+      <li>
+        <a href="producto.html">Productos</a>
+      </li>
+      <li>
+        <a href="servicio.html">Servicios</a>
+      </li>
+      <li>
+        <a href="contacto.html">Contacto</a>
+      </li>
+    </ul>
+  </body>
 </html>
