--- a/css/midudev/css/index.html
+++ b/css/midudev/css/index.html
@@ -29,7 +29,7 @@
       .link:hover {
         color: #d00;
         /* border: 5px solid violet; */
-        outline: 5px solid violet; 
+        outline: 5px solid violet;
       }
 
       button {
@@ -47,14 +47,18 @@
       <nav>
         <a href="#experiencia" class="link">Experiencia</a>
         <a href="#proyectos" class="link">Proyectos</a>
-        <a href="https://discord.com" target="_blank" rel="noreferrer"
-          class="link">Discord</a
+        <a
+          href="https://discord.com"
+          target="_blank"
+          rel="noreferrer"
+          class="link"
+          >Discord</a
         >
       </nav>
     </header>
 
     <main>
-        <button>Más información</button>
+      <button>Más información</button>
       <h2 id="experiencia">Experiencia</h2>
       <ul>
         <li class="list-item">Adevinta - 2022</li>
