--- a/css/science_book/index.html
+++ b/css/science_book/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Science Book</title>
+    <title>Libro de Ciencias</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
-      <h1>Science Book</h1>
+      <h1>Libro de Ciencias</h1>
     </header>
 
     <main>
