--- a/css/text_styles/index.html
+++ b/css/text_styles/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Text Styles</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-
-  <main>
-    <h1>Hola</h1>
-    <p>Texto</p>
-    <p id="more-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, dolorum?</p>
-  </main>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Text Styles</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Hola</h1>
+      <p>Texto</p>
+      <p id="more-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+        dolorum?
+      </p>
+    </main>
+  </body>
 </html>
