--- a/css/text_styles_3/index.html
+++ b/css/text_styles_3/index.html
@@ -21,9 +21,19 @@
         tempore.
       </p>
       <p id="third">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque soluta molestiae veritatis autem explicabo temporibus, id officiis dicta at iusto velit aut possimus facere itaque. Quaerat ipsum eius, porro maxime pariatur quibusdam, tempore, veritatis amet fugit consequatur temporibus error! Maxime dicta voluptatibus, pariatur id quo sunt vitae ipsam cupiditate reprehenderit.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque soluta
+        molestiae veritatis autem explicabo temporibus, id officiis dicta at
+        iusto velit aut possimus facere itaque. Quaerat ipsum eius, porro maxime
+        pariatur quibusdam, tempore, veritatis amet fugit consequatur temporibus
+        error! Maxime dicta voluptatibus, pariatur id quo sunt vitae ipsam
+        cupiditate reprehenderit.
       </p>
-      <p id="fourth">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aspernatur quasi tempore beatae, quia explicabo. Similique exercitationem consequuntur modi ea eveniet esse cupiditate molestias? Odit porro sit quaerat quod corporis.</p>
+      <p id="fourth">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+        aspernatur quasi tempore beatae, quia explicabo. Similique
+        exercitationem consequuntur modi ea eveniet esse cupiditate molestias?
+        Odit porro sit quaerat quod corporis.
+      </p>
     </main>
   </body>
 </html>
