--- a/html/forms-new/forms1.html
+++ b/html/forms-new/forms1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forms New</title>
     <style>
-      form input{
+      form input {
         display: block;
         margin: 1rem 0;
       }
@@ -32,9 +32,9 @@
       <!-- <input type="datetime" name="datetime" /> -->
       <input type="datetime-local" name="datetime-local" />
       <input type="date" name="date" />
-      <input type="month" name="month">
-      <input type="week" name="week">
-      <input type="time" name="time">
+      <input type="month" name="month" />
+      <input type="week" name="week" />
+      <input type="time" name="time" />
 
       <button type="submit">Send</button>
     </form>
