--- a/html/forms-new/forms2.html
+++ b/html/forms-new/forms2.html
@@ -32,9 +32,9 @@
         title="Set the number"
       />
 
-      <input type="text" name="Country" placeholder="El Salvador">
+      <input type="text" name="Country" placeholder="El Salvador" />
       <!-- CAMPO OBLIGATORIO -->
-      <input type="text" name="Country" placeholder="El Salvador" required>
+      <input type="text" name="Country" placeholder="El Salvador" required />
 
       <button type="submit">Send</button>
     </form>
