--- a/html/lists/listasConDescripcion.htm
+++ b/html/lists/listasConDescripcion.htm
@@ -1,22 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>Listas con descripciones ejemplos.</title>
+  </head>
 
-<head>
-  <title>Listas con descripciones ejemplos.</title>
-</head>
-
-<body>
-  <h1>Ejemplos</h1>
-  <h2>Partes de la Web</h2>
-  <dl>
-    <dt><strong>HTML</strong></dt>
-    <dd>HiperText Markup Languaje, es el lenguaje con el cual se escriben las paginas web.Posee un vocabulario y una
-      gramatica.</dd>
-    <dt><strong>HTTP</strong></dt>
-    <dd>Es el lenguaje o forma de comunicarse el cliente web y el servidor web.</dd>
-    <dt><strong>URL</strong></dt>
-    <dd>El identificador de recursos uniforme se utiliza para determinar donde estara ubicado archivos en la web para
-      encotrarlos.</dd>
-  </dl>
-</body>
-
+  <body>
+    <h1>Ejemplos</h1>
+    <h2>Partes de la Web</h2>
+    <dl>
+      <dt><strong>HTML</strong></dt>
+      <dd>
+        HiperText Markup Languaje, es el lenguaje con el cual se escriben las
+        paginas web.Posee un vocabulario y una gramatica.
+      </dd>
+      <dt><strong>HTTP</strong></dt>
+      <dd>
+        Es el lenguaje o forma de comunicarse el cliente web y el servidor web.
+      </dd>
+      <dt><strong>URL</strong></dt>
+      <dd>
+        El identificador de recursos uniforme se utiliza para determinar donde
+        estara ubicado archivos en la web para encotrarlos.
+      </dd>
+    </dl>
+  </body>
 </html>
