--- a/html/other/index.html
+++ b/html/other/index.html
@@ -1,19 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>ERASE UNA VEZ HTML</title>
+  </head>
 
-<head>
-  <title>ERASE UNA VEZ HTML</title>
-</head>
-
-<body>
-  <h1>ERASE UNA VEZ HTML</h1>
-  <h2>El padre</h2>
-  <p>El padre de la web <strong>Tim Berners-Lee</strong> es tambien padre del lenguaje HTML, <em>Hypertext Markup
-      Languaje</em></p>
-  <h2>Estandarizacion</h2>
-  <p>El lenguaje HTML, esta estandarizado por el w3c, el <em>world wide Web Consortium</em></p>
-  <p>La version actual de HTML es la 5, aunque no esta terminada</p>
-  <p>Se espera que este terminada en el año <strong>2014</strong></p>
-
-</body>
-
+  <body>
+    <h1>ERASE UNA VEZ HTML</h1>
+    <h2>El padre</h2>
+    <p>
+      El padre de la web <strong>Tim Berners-Lee</strong> es tambien padre del
+      lenguaje HTML, <em>Hypertext Markup Languaje</em>
+    </p>
+    <h2>Estandarizacion</h2>
+    <p>
+      El lenguaje HTML, esta estandarizado por el w3c, el
+      <em>world wide Web Consortium</em>
+    </p>
+    <p>La version actual de HTML es la 5, aunque no esta terminada</p>
+    <p>Se espera que este terminada en el año <strong>2014</strong></p>
+  </body>
 </html>
