--- a/html/other/myCurriculum.htm
+++ b/html/other/myCurriculum.htm
@@ -1,28 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>Curriculum de Oscar Maldonado 📦</title>
+  </head>
 
-<head>
-  <title>Curriculum de Daniel Yanes</title>
-</head>
+  <body>
+    <h1>Curriculum of Oscar Maldonado.</h1>
+    <h2>Datos personales.</h2>
+    <ul>
+      <li>Nombre Completo: <strong>Oscar Maldonado Fuentes</strong></li>
+      <li>Fecha de nacimiento: <strong>07/02/2002</strong></li>
+      <li>Lugar de nacimiento: <strong>Caracas, Venezuela</strong></li>
+    </ul>
 
-<body>
-  <h1>Curriculum of Daniel Yanes.</h1>
-  <h2>Datos personales.</h2>
-  <ul>
-    <li>Nombre Completo: <strong>Daniel Eduardo Yanes Hercules</strong></li>
-    <li>Fecha de nacimiento: <strong>20/07/2000</strong></li>
-    <li>Lugar de nacimiento: <strong>El Salvador</strong></li>
-  </ul>
+    <h2>Formacion academica.</h2>
+    <ul>
+      <li>2014-2019: <strong>Centro Escolar Pablo Miranda</strong></li>
+      <li>2020-2022: <strong>Centro Escolar El buen camino</strong></li>
+      <li>2023-2024: <strong>Instituto Nacional Caracas</strong></li>
+    </ul>
 
-  <h2>Formacion academica.</h2>
-  <ul>
-    <li>2014-2019: <strong>Centro Escolar Catolico San Juan Bosco</strong></li>
-    <li>2020-2022: <strong>Centro Escolar Canton San Antonio</strong></li>
-    <li>2023-2024: <strong>Instituto Nacional de San Juan Opico</strong></li>
-  </ul>
-
-  <h2>Experencia Laboral</h2>
-  <p><em>Ninguna</em></p>
-
-</body>
-
+    <h2>Experencia Laboral</h2>
+    <p><em>Ninguna 🚀</em></p>
+  </body>
 </html>
