--- a/html/tables/practice.html
+++ b/html/tables/practice.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Practice 2</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <table>
+      <caption>
+        Información
+      </caption>
 
-    
-    
-</body>
+      <thead>
+        <tr>
+          <th>Información</th>
+          <th>Valor</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Papa</td>
+          <td>Marcos Diáz.</td>
+        </tr>
+        <tr>
+          <td>Mamá</td>
+          <td>Karina Murcía.</td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
