--- a/css/avanced_selectors_2/index.html
+++ b/css/avanced_selectors_2/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avances Selectors 2</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Avanced Selectors 2</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h1>Elementos de lista</h1>
@@ -20,6 +20,5 @@
       <p>CSS</p>
       <p>JS</p>
     </section>
-
   </body>
 </html>
