--- a/css/colors/index.html
+++ b/css/colors/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Una pagina web para practicar">
+    <meta name="description" content="Una pagina web para practicar" />
     <title>Mi Página Web</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
