--- a/css/midudev/metas/index.html
+++ b/css/midudev/metas/index.html
@@ -23,17 +23,51 @@
     <meta property="og:image" content="./icon.png" />
     <meta property="og:image:alt" content="Una fotografía mía programando" />
 
-    <link rel="canonical" href="https://www.google.com">
+    <link rel="canonical" href="https://www.google.com" />
 
     <style>
       body {
         background: #0ef;
       }
     </style>
-
   </head>
   <body>
     <h1>Una página para practicar</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quas mollitia enim ipsa molestias iste distinctio repellendus fuga nemo, ducimus laboriosam architecto ad explicabo non inventore hic, nisi est sit? Laudantium quas facere debitis nesciunt ducimus maiores reprehenderit. Consequatur cupiditate blanditiis exercitationem ad doloribus totam aut autem repellat alias. Adipisci modi inventore commodi similique illum suscipit beatae quaerat vero placeat impedit? Dolor adipisci voluptates, voluptatem quasi minus fuga beatae velit exercitationem consequuntur nam, minima aliquam illo in expedita saepe incidunt. Debitis doloribus eligendi quia! Vitae, nisi? Ipsum dolor omnis architecto temporibus error ducimus amet vitae officia, minima blanditiis illo sunt odio quod perspiciatis molestias voluptate possimus est reprehenderit! Laudantium nesciunt reiciendis impedit quis, repellendus iusto tempora! Vitae earum eum, repellat aperiam accusantium nam eius consequuntur explicabo? Doloribus numquam veritatis tenetur non ab placeat nobis, ipsam voluptates ratione cum vel architecto voluptatum perspiciatis perferendis ea magnam laborum accusamus explicabo excepturi corrupti quidem pariatur inventore quas totam. Dolor voluptates atque dicta? Quos recusandae consequatur a molestiae ipsum corrupti temporibus ipsam unde asperiores magni voluptatibus dolores amet, dolor, fugiat, suscipit aliquam ab voluptatem consequuntur sapiente iure numquam voluptates blanditiis provident! Debitis deleniti iusto quia, recusandae magni nulla nihil facilis veniam eveniet corrupti nisi impedit placeat mollitia cumque ipsam culpa. Hic odio aut, veritatis, aperiam earum repudiandae alias ullam eaque sequi suscipit quidem perspiciatis dolore voluptatum. Laboriosam iusto laborum culpa aliquid totam vitae qui! Magnam distinctio vero pariatur numquam earum mollitia deleniti eum laborum dicta omnis nobis nesciunt laboriosam accusantium reprehenderit ipsam, necessitatibus iusto soluta! Aperiam impedit ratione ex voluptate dolorum! Voluptas, ea? Magni veniam sed culpa sunt eum modi adipisci rem eligendi nihil corporis corrupti ullam, expedita ea architecto. Quasi ipsam debitis perspiciatis aperiam recusandae quod asperiores, qui, obcaecati quam ducimus accusamus sunt eos magnam. Tempore non rerum, voluptate eum corrupti totam voluptates.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quas
+      mollitia enim ipsa molestias iste distinctio repellendus fuga nemo,
+      ducimus laboriosam architecto ad explicabo non inventore hic, nisi est
+      sit? Laudantium quas facere debitis nesciunt ducimus maiores
+      reprehenderit. Consequatur cupiditate blanditiis exercitationem ad
+      doloribus totam aut autem repellat alias. Adipisci modi inventore commodi
+      similique illum suscipit beatae quaerat vero placeat impedit? Dolor
+      adipisci voluptates, voluptatem quasi minus fuga beatae velit
+      exercitationem consequuntur nam, minima aliquam illo in expedita saepe
+      incidunt. Debitis doloribus eligendi quia! Vitae, nisi? Ipsum dolor omnis
+      architecto temporibus error ducimus amet vitae officia, minima blanditiis
+      illo sunt odio quod perspiciatis molestias voluptate possimus est
+      reprehenderit! Laudantium nesciunt reiciendis impedit quis, repellendus
+      iusto tempora! Vitae earum eum, repellat aperiam accusantium nam eius
+      consequuntur explicabo? Doloribus numquam veritatis tenetur non ab placeat
+      nobis, ipsam voluptates ratione cum vel architecto voluptatum perspiciatis
+      perferendis ea magnam laborum accusamus explicabo excepturi corrupti
+      quidem pariatur inventore quas totam. Dolor voluptates atque dicta? Quos
+      recusandae consequatur a molestiae ipsum corrupti temporibus ipsam unde
+      asperiores magni voluptatibus dolores amet, dolor, fugiat, suscipit
+      aliquam ab voluptatem consequuntur sapiente iure numquam voluptates
+      blanditiis provident! Debitis deleniti iusto quia, recusandae magni nulla
+      nihil facilis veniam eveniet corrupti nisi impedit placeat mollitia cumque
+      ipsam culpa. Hic odio aut, veritatis, aperiam earum repudiandae alias
+      ullam eaque sequi suscipit quidem perspiciatis dolore voluptatum.
+      Laboriosam iusto laborum culpa aliquid totam vitae qui! Magnam distinctio
+      vero pariatur numquam earum mollitia deleniti eum laborum dicta omnis
+      nobis nesciunt laboriosam accusantium reprehenderit ipsam, necessitatibus
+      iusto soluta! Aperiam impedit ratione ex voluptate dolorum! Voluptas, ea?
+      Magni veniam sed culpa sunt eum modi adipisci rem eligendi nihil corporis
+      corrupti ullam, expedita ea architecto. Quasi ipsam debitis perspiciatis
+      aperiam recusandae quod asperiores, qui, obcaecati quam ducimus accusamus
+      sunt eos magnam. Tempore non rerum, voluptate eum corrupti totam
+      voluptates.
+    </p>
   </body>
 </html>
