--- a/css/page3/index.html
+++ b/css/page3/index.html
@@ -11,15 +11,34 @@
       <section class="view">
         <article>
           <h1>Article 1</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error praesentium id culpa temporibus. Accusamus officia suscipit animi quod autem itaque doloremque commodi voluptas impedit. Vel nulla corrupti architecto, rerum quod soluta repellat harum molestiae iste magni nam ullam, molestias error dolor velit. Nisi reiciendis, cum praesentium adipisci eius ut illo.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+            praesentium id culpa temporibus. Accusamus officia suscipit animi
+            quod autem itaque doloremque commodi voluptas impedit. Vel nulla
+            corrupti architecto, rerum quod soluta repellat harum molestiae iste
+            magni nam ullam, molestias error dolor velit. Nisi reiciendis, cum
+            praesentium adipisci eius ut illo.
+          </p>
         </article>
         <article>
           <h1>Article 2</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora consequatur recusandae neque ullam id repellat atque quasi ab odio. Veniam aspernatur molestiae assumenda odio eos expedita repellat porro similique soluta, a amet? Voluptates molestias, velit dolor sunt ad beatae sit iure doloremque praesentium nobis odio maxime obcaecati sequi provident temporibus natus soluta totam illum officiis vel impedit id aperiam. Enim.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora
+            consequatur recusandae neque ullam id repellat atque quasi ab odio.
+            Veniam aspernatur molestiae assumenda odio eos expedita repellat
+            porro similique soluta, a amet? Voluptates molestias, velit dolor
+            sunt ad beatae sit iure doloremque praesentium nobis odio maxime
+            obcaecati sequi provident temporibus natus soluta totam illum
+            officiis vel impedit id aperiam. Enim.
+          </p>
         </article>
         <article>
           <h1>Article 3</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nam expedita incidunt molestias, ut exercitationem qui. Omnis, in repudiandae! Accusantium!</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+            nam expedita incidunt molestias, ut exercitationem qui. Omnis, in
+            repudiandae! Accusantium!
+          </p>
         </article>
       </section>
       <section class="video">
