--- a/css/video_page/index.html
+++ b/css/video_page/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Page</title>
-</head>
-<body>
-
-  <video src="./video/video.mp4" controls></video>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Video Page</title>
+  </head>
+  <body>
+    <video src="./video/video.mp4" controls></video>
+  </body>
 </html>
