--- a/html/forms-new/formsExample.html
+++ b/html/forms-new/formsExample.html
@@ -5,7 +5,6 @@
     <title>Nuevas características HTML 5</title>
   </head>
   <body>
-
     <h1>Nuevas herramientas de formularios en HTML 5</h1>
 
     <p>Este es un ejemplo de un formulario utilizando el nuevo HTML 5</p>
@@ -13,27 +12,39 @@
     <form id="form-order">
       <p>
         <label for="name">Nombre (obligatorio)</label>
-        <input type="text" name="name" id="name" placeholder="Carlos Galdamez" autofocus autocomplete required>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          placeholder="Carlos Galdamez"
+          autofocus
+          autocomplete
+          required
+        />
       </p>
 
       <p>
         <label for="passw">Contraseña (obligatorio)</label>
-        <input type="password" name="passw" id="passw" placeholder="qerreoeua87" required>
+        <input
+          type="password"
+          name="passw"
+          id="passw"
+          placeholder="qerreoeua87"
+          required
+        />
         Debe contener al menos 10 caracteres.
       </p>
 
-      <input type="submit" value="Enviar">
-
+      <input type="submit" value="Enviar" />
     </form>
 
     <dl>
-      <dt>
-        Hola
-      </dt>
-        <dd>Test</dd>
-        <dt>Main</dt>
-        <dd>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, numquam?</dd>
+      <dt>Hola</dt>
+      <dd>Test</dd>
+      <dt>Main</dt>
+      <dd>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, numquam?
+      </dd>
     </dl>
-
   </body>
 </html>
