--- a/html/forms/forms.html
+++ b/html/forms/forms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Forms</title>
@@ -28,7 +28,7 @@
       <option value="17">17</option>
       <option value="18">18</option>
       <option value="19">19</option>
-    <select/>
+    <select />
       
      <br />
         
